# cmake_masterclass

./: .gitignore  CMakeLists.txt  greeter.cpp  greeter.hpp  main.cpp
include/greeter/: config.hpp  greeter.hpp
src/: greeter.cpp
